--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   "author": "Andy Zhou",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests --recursive"
+    "test": "mocha tests --recursive",
+    "test:fixtures": "cross-env NODE_ENV=test DEBUG=no-circular-dependencies,no-circular-dependencies:* eslint --ignore-path ./fixtures/.eslintignore --rulesdir ./lib/rules/ ./fixtures/**/*.js",
+    "test:fixtures:prod": "cross-env NODE_ENV=production eslint --ignore-path ./fixtures/.eslintignore --rulesdir ./lib/rules/ ./fixtures/**/*.js",
+    "test:fixtures:bench": "cross-env NODE_ENV=bench eslint --ignore-path ./fixtures/.eslintignore --rulesdir ./lib/rules/ ./fixtures/**/*.js"
   },
   "dependencies": {
     "requireindex": "~1.1.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "cross-env": "^5.1.1",
+    "debug": "^3.1.0",
     "eslint": "~3.9.1",
+    "mkdirp": "^0.5.1",
     "mocha": "^3.1.2"
   },
   "engines": {
