--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   "author": "Andy Zhou",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests --recursive",
+    "lint": "eslint ./{test,lib}/**/*.js",
+    "test": "cross-env NODE_ENV=test DEBUG=no-circular-dependencies,no-circular-dependencies:* mocha tests --recursive",
     "test:fixtures": "cross-env NODE_ENV=test DEBUG=no-circular-dependencies,no-circular-dependencies:* eslint --ignore-path ./fixtures/.eslintignore --rulesdir ./lib/rules/ ./fixtures/**/*.js",
     "test:fixtures:prod": "cross-env NODE_ENV=production eslint --ignore-path ./fixtures/.eslintignore --rulesdir ./lib/rules/ ./fixtures/**/*.js",
-    "test:fixtures:bench": "cross-env NODE_ENV=bench eslint --ignore-path ./fixtures/.eslintignore --rulesdir ./lib/rules/ ./fixtures/**/*.js"
+    "test:fixtures:bench": "cross-env NODE_ENV=bench eslint --ignore-path ./fixtures/.eslintignore --rulesdir ./lib/rules/ ./fixtures/**/*.js",
+    "precommit": "npm run lint && npm run test && git add ."
   },
   "dependencies": {
     "requireindex": "~1.1.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
     "cross-env": "^5.1.1",
     "debug": "^3.1.0",
     "eslint": "~3.9.1",
+    "husky": "^0.14.3",
     "mkdirp": "^0.5.1",
     "mocha": "^3.1.2"
   },
