--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "precommit": "npm run lint && npm run test && git add ."
   },
   "dependencies": {
-    "requireindex": "~1.1.0"
+    "requireindex": "~1.1.0",
+    "debug": "^3.1.0"
   },
   "devDependencies": {
     "cross-env": "^5.1.1",
-    "debug": "^3.1.0",
     "eslint": "~3.9.1",
     "husky": "^0.14.3",
     "mkdirp": "^0.5.1",
     "mocha": "^3.1.2"
+  },
+  "peerDependencies": {
+    "eslint": "*"
   },
   "engines": {
     "node": ">=0.10.0"
