--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "requireindex": "~1.1.0",
-    "debug": "^3.1.0"
+    "debug": "^3.1.0",
+    "espree": "^3.5.2"
   },
   "devDependencies": {
     "cross-env": "^5.1.1",
